--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="container" class="m-0">
       <img
         id="img1"
-        src="images/img4.jpg"
+        src="img4.jpg"
         alt="currency converter img"
         class="w-full h-full object-cover opacity-100"
       />
