--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <label for="input-1" class="block text-white opacity-50 mb-1">Enter Amount</label>
       <input
         id="input-1"
-        type="text"
+        type="number"
         placeholder="Enter here"
         class="w-[320px] h-[40px] mb-6 bg-transparent border border-white text-white placeholder-white/50 px-2"
       />
