--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1
       class="absolute top-[170px] left-[30px] text-white text-[50px] font-normal leading-snug"
     >
-      Build A Currency <br />
+      Built A Currency <br />
       Converter Using <br />Javascript
     </h1>
   
@@ -94,10 +94,10 @@
             name="currency"
             class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
           >
-            <option value="usd">USD</option>
+            <!-- <option value="usd">USD</option>
             <option value="inr">INR</option>
             <option value="eur">EUR</option>
-            <option value="gbp">GBP</option>
+            <option value="gbp">GBP</option> -->
           </select>
         </div>
   
@@ -108,10 +108,11 @@
             name="currency"
             class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
           >
-            <option value="usd">USD</option>
+          
+            <!-- <option value="usd">USD</option>
             <option value="inr">INR</option>
             <option value="eur">EUR</option>
-            <option value="gbp">GBP</option>
+            <option value="gbp">GBP</option> -->
           </select>
         </div>
       </div>
@@ -120,6 +121,7 @@
     </div>
   </div>
   
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="app.js"></script> 
   </body>
 </html>
