--- a/index.html
+++ b/index.html
@@ -117,7 +117,15 @@
         </div>
       </div>
   
-      <button class="btn">Exchange</button>
+      <button class="btn" onclick="exchange()">Exchange</button>
+      
+      <textarea
+  id="resultBox"
+  rows="2"
+  readonly
+  class="mt-4 w-full p-3 rounded-xl border border-white border-opacity-30 bg-white bg-opacity-10 text-white text-center text-lg shadow-md backdrop-blur-sm resize-none focus:outline-none"
+></textarea>
+
     </div>
   </div>
   
