--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <style>
       /* From Uiverse.io by ShrinilDhorda */
       .btn {
+        margin-left: 25%;
+        margin-bottom: 10%;
         font-size: 1.2rem;
         padding: 1rem 2.5rem;
         border: none;
@@ -65,71 +67,77 @@
       />
 
       <h1
-      class="absolute top-[170px] left-[30px] text-white text-[50px] font-normal leading-snug"
-    >
-      Built A Currency <br />
-      Converter Using <br />Javascript
-    </h1>
-  
-    <div
-      class="w-[400px] h-[500px] absolute right-[120px] top-[60px] rounded-[20px] border border-white/20 shadow-xl backdrop-blur-[10px] bg-white/10 p-6"
-    >
-      <h2 class="text-white text-[25px] font-normal opacity-50 mb-6 text-center">
-        Currency Converter
-      </h2>
-  
-      <label for="input-1" class="block text-white opacity-50 mb-1">Enter Amount</label>
-      <input
-        id="input-1"
-        type="number"
-        placeholder="Enter here"
-        class="w-[320px] h-[40px] mb-6 bg-transparent border border-white text-white placeholder-white/50 px-2"
-      />
-  
-      <div class="flex justify-between mb-4">
-        <div>
-          <label for="fromCurrency" class="block text-white opacity-50 mb-1">From</label>
-          <select
-            id="fromCurrency"
-            name="currency"
-            class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
-          >
-            <!-- <option value="usd">USD</option>
-            <option value="inr">INR</option>
-            <option value="eur">EUR</option>
-            <option value="gbp">GBP</option> -->
-          </select>
-        </div>
-  
-        <div>
-          <label for="toCurrency" class="block text-white opacity-50 mb-1">To</label>
-          <select
-            id="toCurrency"
-            name="currency"
-            class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
-          >
-          
-            <!-- <option value="usd">USD</option>
-            <option value="inr">INR</option>
-            <option value="eur">EUR</option>
-            <option value="gbp">GBP</option> -->
-          </select>
-        </div>
-      </div>
-  
-      <button class="btn" onclick="exchange()">Exchange</button>
-      
-      <textarea
-  id="resultBox"
-  rows="2"
-  readonly
-  class="mt-4 w-full p-3 rounded-xl border border-white border-opacity-30 bg-white bg-opacity-10 text-white text-center text-lg shadow-md backdrop-blur-sm resize-none focus:outline-none"
-></textarea>
+        class="absolute top-[170px] left-[30px] text-white text-[50px] font-normal leading-snug"
+      >
+        Built A Currency <br />
+        Converter Using <br />Javascript
+      </h1>
 
+      <div
+        class="w-[400px] h-[500px] absolute right-[120px] top-[60px] rounded-[20px] border border-white/20 shadow-xl backdrop-blur-[10px] bg-white/10 p-6"
+      >
+        <h2
+          class="text-white text-[25px] font-normal opacity-50 mb-6 text-center"
+        >
+          Currency Converter
+        </h2>
+
+        <label for="input-1" class="block text-white opacity-50 mb-1"
+          >Enter Amount</label
+        >
+        <input
+          id="input-1"
+          type="number"
+          placeholder="Enter here"
+          class="w-[320px] h-[40px] mb-6 bg-transparent border border-white text-white placeholder-white/50 px-2"
+        />
+
+        <div class="flex justify-between mb-4">
+          <div>
+            <label for="fromCurrency" class="block text-white opacity-50 mb-1"
+              >From</label
+            >
+            <select
+              id="fromCurrency"
+              name="currency"
+              class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
+            >
+              <!-- <option value="usd">USD</option>
+            <option value="inr">INR</option>
+            <option value="eur">EUR</option>
+            <option value="gbp">GBP</option> -->
+            </select>
+          </div>
+
+          <div>
+            <label for="toCurrency" class="block text-white opacity-50 mb-1"
+              >To</label
+            >
+            <select
+              id="toCurrency"
+              name="currency"
+              class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
+            >
+              <!-- <option value="usd">USD</option>
+            <option value="inr">INR</option>
+            <option value="eur">EUR</option>
+            <option value="gbp">GBP</option> -->
+            </select>
+          </div>
+        </div>
+
+        <button class="btn" onclick="exchange()">Exchange</button>
+
+        <textarea
+          id="resultBox"
+          rows="2"
+          readonly
+          class="mt-16 w-full p-3 rounded-xl border border-white border-opacity-30 bg-white bg-opacity-10 text-white text-center text-lg shadow-md backdrop-blur-sm resize-none focus:outline-none"
+        ></textarea>
+      </div>
     </div>
-  </div>
-  
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="app.js"></script> 
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
