--- a/index.html
+++ b/index.html
@@ -11,9 +11,56 @@
       href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    link
     <style>
-      /* From Uiverse.io by ShrinilDhorda */
+      .neon-blue {
+        color: #24caca;
+        text-shadow: 0 0 5px #00f0ff, 0 0 10px #00f0ff, 0 0 20px #00f0ff,
+          0 0 40px #00ccff, 0 0 200px #00ccff;
+      }
+
+      /* From Uiverse.io by AlimurtuzaCodes */
+      .btn2 {
+        border: none;
+        width: 100%;
+        height: 3em;
+        /* border-radius: 3em; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 12px;
+        background: #002959;
+        cursor: pointer;
+        transition: all 450ms ease-in-out;
+      }
+
+      .sparkle {
+        fill: #aaaaaa;
+        transition: all 800ms ease;
+      }
+
+      .text {
+        font-weight: 600;
+        color: #aaaaaa;
+        font-size: medium;
+      }
+
+      .btn2:hover {
+        background: linear-gradient(0deg, #15a1ff, #003cff);
+        box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4),
+          inset 0px -4px 0px 0px rgba(0, 0, 0, 0.2),
+          0px 0px 0px 4px rgba(255, 255, 255, 0.2), 0px 0px 180px 0px #9917ff;
+        transform: translateY(-2px);
+      }
+
+      .btn2:hover .text {
+        color: white;
+      }
+
+      .btn2:hover .sparkle {
+        fill: white;
+        transform: scale(1.2);
+      }
+
       .btn {
         margin-left: 25%;
         margin-bottom: 6%;
@@ -57,19 +104,25 @@
       }
     </style>
   </head>
-  <body class="m-0 w-full relative bg-black">
+  <body class="m-0 w-full relative">
+    <div></div>
     <div id="container" class="m-0">
       <img
         id="img1"
-        src="img4.jpg"
+        src="https://t4.ftcdn.net/jpg/08/43/93/17/240_F_843931771_8V5JfLjIdZeVAL09wsEIQdkEMZqK9nTO.jpg"
         alt="currency converter img"
         class="w-full h-full object-cover opacity-100"
       />
+      <div>
+        <marquee scrollamount="3" class="btn2 absolute top-0">
+          <span class="text" id="marquee"></span>
+        </marquee>
+      </div>
 
       <h1
         class="absolute top-[170px] left-[30px] text-white text-[50px] font-normal leading-snug"
       >
-        Built A Currency <br />
+        Built Currency <br />
         Converter Using <br />Javascript
       </h1>
 
@@ -77,12 +130,12 @@
         class="w-[400px] h-[500px] absolute right-[120px] top-[60px] rounded-[20px] border border-white/20 shadow-xl backdrop-blur-[10px] bg-white/10 p-6"
       >
         <h2
-          class="text-white text-[25px] font-normal opacity-50 mb-6 text-center"
+          class="text-white text-[25px] font-normal opacity-70 mb-6 text-center neon-blue"
         >
           Currency Converter
         </h2>
 
-        <label for="input-1" class="block text-white opacity-50 mb-1"
+        <label for="input-1" class="block text-white opacity-70 mb-1"
           >Enter Amount</label
         >
         <input
@@ -100,13 +153,8 @@
             <select
               id="fromCurrency"
               name="currency"
-              class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
-            >
-              <!-- <option value="usd">USD</option>
-            <option value="inr">INR</option>
-            <option value="eur">EUR</option>
-            <option value="gbp">GBP</option> -->
-            </select>
+              class="w-full sm:w-[120px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
+            ></select>
           </div>
 
           <div>
@@ -116,13 +164,8 @@
             <select
               id="toCurrency"
               name="currency"
-              class="w-[100px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2"
-            >
-              <!-- <option value="usd">USD</option>
-            <option value="inr">INR</option>
-            <option value="eur">EUR</option>
-            <option value="gbp">GBP</option> -->
-            </select>
+              class="w-full sm:w-[120px] h-[40px] bg-[#1f1f1f] border border-white/30 text-white text-sm rounded px-2 mx-4"
+            ></select>
           </div>
         </div>
 
