made the backgrounder darker

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
       body {
         font-family: "PT Sans", sans-serif;
+        background-color: black;
       }
 
       h1,
@@ -111,7 +112,7 @@
         id="img1"
         src="https://t4.ftcdn.net/jpg/08/43/93/17/240_F_843931771_8V5JfLjIdZeVAL09wsEIQdkEMZqK9nTO.jpg"
         alt="currency converter img"
-        class="w-full h-full object-cover opacity-100"
+        class="w-full h-full object-cover opacity-50"
       />
       <div>
         <marquee scrollamount="3" class="btn2 absolute top-0">
